--- a/hw4/html/file_list.html
+++ b/hw4/html/file_list.html
@@ -9,6 +9,7 @@
 <li>content/video/big_buck_bunny_480p_stereo.ogg</li>
 <li>content/video/Firefox_Final_VO.ogv</li>
 <li>content/video/sample6.webm</li>
+<li>content/video/videoplayback.mp4</li>
 <li>content/video/video.webm</li>
 <li>content/video/video.ogg</li>
 <li>content/video/trailer_400p.ogg</li>
