--- a/hw4/html/file_list.html
+++ b/hw4/html/file_list.html
@@ -8,15 +8,25 @@
 <ul>
 <li>content/video/big_buck_bunny_480p_stereo.ogg</li>
 <li>content/video/Firefox_Final_VO.ogv</li>
+<li>content/image/aaa_comp.png</li>
 <li>content/video/sample6.webm</li>
+<li>content/secrets/secret_binary</li>
 <li>content/video/videoplayback.mp4</li>
 <li>content/video/video.webm</li>
 <li>content/video/video.ogg</li>
 <li>content/video/trailer_400p.ogg</li>
+<li>content/trollface.txt</li>
+<li>µ)–</li>
 <li>content/video/sample4.ogg</li>
+<li>content/test.txt</li>
+<li>content/test2.txt</li>
 <li>content/video/sample5.ogg</li>
+<li>µ)–</li>
+<li>content/image/aaa.png</li>
 <li>content/video/sample1.ogg</li>
 <li>content/video/sample5.mkv</li>
+<li>content/image/apple_test_image.jpg</li>
+<li>content/test3.txt</li>
 <li>content/video/sample-30s.webm</li>
 </ul>
 </body>
