--- a/hw4/html/file_list.html
+++ b/hw4/html/file_list.html
@@ -13,8 +13,11 @@
 <li>content/video/video.webm</li>
 <li>content/video/video.ogg</li>
 <li>content/video/trailer_400p.ogg</li>
+<li>content/video/video2.web</li>
 <li>content/video/sample4.ogg</li>
+<li>content/video/big_buck_bunny_480p_stereo_3.og</li>
 <li>content/video/sample5.ogg</li>
+<li>content/video/big_buck_bunny_480p_stereo_2.og</li>
 <li>content/video/sample1.ogg</li>
 <li>content/video/sample5.mkv</li>
 <li>content/video/sample-30s.webm</li>
