--- a/hw4/html/file_list.html
+++ b/hw4/html/file_list.html
@@ -6,20 +6,30 @@
 <body>
 <h1>File List</h1>
 <ul>
+<li>content/video/big_buck_bunny_480p_stereo_3.ogg</li>
 <li>content/video/big_buck_bunny_480p_stereo.ogg</li>
+<li>content/video/video2.webm</li>
 <li>content/video/Firefox_Final_VO.ogv</li>
+<li>content/image/aaa_comp.png</li>
+<li>content/video/big_buck_bunny_480p_3.ogg</li>
 <li>content/video/sample6.webm</li>
+<li>content/secrets/secret_binary</li>
 <li>content/video/videoplayback.mp4</li>
 <li>content/video/video.webm</li>
 <li>content/video/video.ogg</li>
 <li>content/video/trailer_400p.ogg</li>
-<li>content/video/video2.web</li>
+<li>content/trollface.txt</li>
 <li>content/video/sample4.ogg</li>
-<li>content/video/big_buck_bunny_480p_stereo_3.og</li>
+<li>content/video/video3.webm</li>
+<li>content/test.txt</li>
+<li>content/test2.txt</li>
 <li>content/video/sample5.ogg</li>
-<li>content/video/big_buck_bunny_480p_stereo_2.og</li>
+<li>content/video/big_buck_bunny_480p_stereo_2.ogg</li>
+<li>content/image/aaa.png</li>
 <li>content/video/sample1.ogg</li>
 <li>content/video/sample5.mkv</li>
+<li>content/image/apple_test_image.jpg</li>
+<li>content/test3.txt</li>
 <li>content/video/sample-30s.webm</li>
 </ul>
 </body>
